--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="sidebar"></div>
-    <div class="topbar"></div>
-    <div class="main"></div>
+    <div class="sidebar">Sidebar</div>
+    <div class="topbar">Topbar</div>
+    <div class="main">main</div>
 </body>
 </html>
