--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+        <div class="logo">
+            <img src="images/view-dashboard.png" alt="Logo">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="top-nav">
+            <div class="icon-text">
+                <img src="images/home.png"><p>Home</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/card-account-details.png"><p>Profile</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/message-reply.png"><p>Messages</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/clock-time-three.png"><p>History</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/file-multiple.png"><p>Tasks</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/account-group.png"><p>Communities</p>
+            </div>
+        </div>
+        <div class="bottom-nav">
+            <div class="icon-text">
+                <img src="images/cog.png"><p>Settings</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/help-box.png"><p>Support</p>
+            </div>
+            <div class="icon-text">
+                <img src="images/shield-check.png"><p>Privacy</p>
+            </div>
+        </div>
+    </div>
+
     <div class="topbar">Topbar</div>
+    
     <div class="main">main</div>
 </body>
 </html>
