Add child divs to main

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </div>
 
     <div class="topbar">Topbar</div>
-    
-    <div class="main">main</div>
+
+    <div class="main">
+        <div class="projects"></div>
+        <div class="right"></div>
+    </div>
 </body>
 </html>
