Add divs and content to top bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,29 @@
         </div>
     </div>
 
-    <div class="topbar">Topbar</div>
+    <div class="topbar">
+        <div class="search">
+            <img src="images/magnify.svg" alt="Search" width="32px">
+            <input type="text" class="form-input">
+        </div>
+        <div class="login">
+            <img src="images/bell-ring-outline.svg" width="32px">
+            <img src="images/Icon-Morgan.PNG" alt="Profile Pic" width="52px" class="avater-navbar">
+            <h2>Morgan Oakley</h2>
+        </div>
+        <div class="welcome">
+            <img src="images/Icon-Morgan-large.PNG" alt="Profile picture" width="65px" class="avatar-welcome">
+            <div class="welcome-text">
+                <h4>Hi there,</h4>
+                <h1>Morgan Oakley (@Morgan)</h1>
+            </div>
+        </div>
+        <div class="buttons">
+            <button class="btn">New</button>
+            <button class="btn">Upload</button>
+            <button class="btn">Share</button>
+        </div>
+    </div>
 
     <div class="main">
         <div class="projects"></div>
