--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 
     <div class="main">
         <div class="projects"></div>
-        <div class="right"></div>
+        <div class="right">
+            <div class="announcements"></div>
+            <div class="trending"></div>
+        </div>
     </div>
 </body>
 </html>
