--- a/index.html
+++ b/index.html
@@ -148,7 +148,23 @@
             </div>
         </div>
         <div class="right">
-            <div class="announcements"></div>
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="side-card">
+                    <div class="an1">
+                        <h3>Site Maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="an2">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="an3">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
             <div class="trending"></div>
         </div>
     </div>
