Add tending child divs

--- a/index.html
+++ b/index.html
@@ -165,7 +165,12 @@
                     </div>
                 </div>
             </div>
-            <div class="trending"></div>
+            <div class="trending">
+                <div class="profile"></div>
+                <div class="profile"></div>
+                <div class="profile"></div>
+                <div class="profile"></div>
+            </div>
         </div>
     </div>
 </body>
