Add child divs to trending

--- a/index.html
+++ b/index.html
@@ -166,10 +166,13 @@
                 </div>
             </div>
             <div class="trending">
-                <div class="profile"></div>
-                <div class="profile"></div>
-                <div class="profile"></div>
-                <div class="profile"></div>
+                <h2>Trending</h2>
+                <div class="side-card">
+                    <div class="profile"></div>
+                    <div class="profile"></div>
+                    <div class="profile"></div>
+                    <div class="profile"></div>
+                </div>
             </div>
         </div>
     </div>
