Add profile contnet

--- a/index.html
+++ b/index.html
@@ -168,7 +168,13 @@
             <div class="trending">
                 <h2>Trending</h2>
                 <div class="side-card">
-                    <div class="profile"></div>
+                    <div class="profile">
+                        <img src="./images/Icon-tegan.PNG" alt="Tegan">
+                        <div class="profile-name">
+                            <p>@tegan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
                     <div class="profile"></div>
                     <div class="profile"></div>
                     <div class="profile"></div>
