Add remaining content to trending

--- a/index.html
+++ b/index.html
@@ -175,9 +175,27 @@
                             <p>World Peace Builder</p>
                         </div>
                     </div>
-                    <div class="profile"></div>
-                    <div class="profile"></div>
-                    <div class="profile"></div>
+                    <div class="profile">
+                        <img src="images/Icon-Morgan.PNG" alt="Morgan">
+                        <div class="profile-name">
+                            <p>@morgan</p>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="./images/Icon-kendall.PNG" alt="Kendall">
+                        <div class="profile-name">
+                            <p>@kendall</p>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="./images/Icon-alex.PNG" alt="Alex">
+                        <div class="profile-name">
+                            <p>@alex</p>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
