--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="trending">
                 <h2>Trending</h2>
-                <div class="side-card">
+                <div class="side-card-trending">
                     <div class="profile">
                         <img src="./images/Icon-tegan.PNG" alt="Tegan">
                         <div class="profile-name">
